修复单元测试的错误